test(m3-02): make fuzz evidence fail closed