@@ -7,12 +7,13 @@ import java.nio.file.Path;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public final class TamperCatalogRunner {
     private static final List<String> FIELDS = List.of(
@@ -24,6 +25,17 @@ public final class TamperCatalogRunner {
             "primaryCodePreserved", "cleanupFailureSuppressed");
     private static final Set<String> HOST_TARGETS = Set.of("apk", "axml", "container-host");
     private static final Set<String> RUNTIME_TARGETS = Set.of("runtime-prehandle", "runtime-posthandle", "guard");
+    private static final Map<String, String> APK_FIXTURES = Map.of(
+            "truncate_tail", "central-local-length-conflict.apk",
+            "duplicate_entry", "duplicate-entry.apk",
+            "path_traversal", "path-traversal.apk",
+            "inflate_size_limit", "compression-bomb.apk");
+    private static final Map<String, String> AXML_FIXTURES = Map.of(
+            "chunk_size_overflow", "oversized-root",
+            "string_length_overflow", "string-length-truncated",
+            "resource_map_collision", "resource-id-collision",
+            "nesting_overflow", "nesting-limit");
+
     private TamperCatalogRunner() {}
 
     public static void main(String[] args) throws Exception {
@@ -44,33 +56,65 @@ public final class TamperCatalogRunner {
         List<Map<String, String>> cases = parse(catalogBytes);
         validate(cases);
 
-        byte[] original = new byte[4096];
-        for (int index = 0; index < original.length; index++) original[index] = (byte) (index * 31 + 7);
-        byte[] originalDigest = sha256(original);
-        List<String> mutations = new ArrayList<>();
+        String apkText = Files.readString(apkReport, StandardCharsets.UTF_8);
+        String axmlText = Files.readString(axmlReport, StandardCharsets.UTF_8);
+        String containerText = Files.readString(containerReport, StandardCharsets.UTF_8);
+        List<ObservedHostCase> observed = new ArrayList<>();
         for (Map<String, String> current : cases) {
-            byte[] mutated = mutate(original, current.get("mutation"));
-            if (Arrays.equals(original, mutated)) throw new AssertionError("mutation made no change: " + current.get("id"));
-            if (!MessageDigest.isEqual(originalDigest, sha256(original))) {
-                throw new AssertionError("mutation changed the original fixture: " + current.get("id"));
-            }
-            Path target = work.resolve(current.get("id") + ".bin");
-            Files.write(target, mutated);
-            mutations.add(current.get("id") + ":" + hex(sha256(mutated)));
+            if (!HOST_TARGETS.contains(current.get("target"))) continue;
+            observed.add(observeHostCase(current, apkText, axmlText, containerText));
         }
-
-        String mutationDigest = hex(sha256(String.join("\n", mutations).getBytes(StandardCharsets.UTF_8)));
-        verifyProductionEvidence(apkReport, axmlReport, containerReport);
+        if (observed.size() != 12) throw new AssertionError("expected 12 exact Host catalog cases");
+        String canonical = observed.stream().map(ObservedHostCase::canonical).reduce("", (left, right) -> left + right + "\n");
         writeTamperReport(
                 tamperReport,
                 cases.size(),
+                observed,
                 hex(sha256(catalogBytes)),
-                mutationDigest,
+                hex(sha256(canonical.getBytes(StandardCharsets.UTF_8))),
                 apkReport,
                 axmlReport,
                 containerReport);
         writeSummary(report, regressionReport, tamperReport);
-        System.out.println("OK: M3-02 tamper cases=" + cases.size() + " catalog_sha256=" + hex(sha256(catalogBytes)));
+        System.out.println("OK: M3-02 Host tamper cases=" + observed.size() +
+                " runtime_pending=" + (cases.size() - observed.size()) +
+                " catalog_sha256=" + hex(sha256(catalogBytes)));
+    }
+
+    private static ObservedHostCase observeHostCase(
+            Map<String, String> current, String apk, String axml, String container) {
+        String target = current.get("target");
+        String mutation = current.get("mutation");
+        String code = current.get("expectedCode");
+        String stage = current.get("expectedStage");
+        String inputHash;
+        if (target.equals("apk")) {
+            String fixture = APK_FIXTURES.get(mutation);
+            if (fixture == null) throw new AssertionError("unmapped APK catalog mutation: " + mutation);
+            Matcher match = Pattern.compile("\\{\\\"name\\\":\\\"" + Pattern.quote(fixture) +
+                    "\\\",\\\"sha256\\\":\\\"([0-9a-f]{64})\\\",\\\"code\\\":\\\"" +
+                    Pattern.quote(code) + "\\\"").matcher(apk);
+            if (!match.find()) throw new AssertionError("APK evidence mismatch for " + current.get("id"));
+            inputHash = match.group(1);
+        } else if (target.equals("axml")) {
+            String fixture = AXML_FIXTURES.get(mutation);
+            if (fixture == null) throw new AssertionError("unmapped AXML catalog mutation: " + mutation);
+            Matcher match = Pattern.compile("\\{\\\"case\\\":\\\"" + Pattern.quote(fixture) +
+                    "\\\",\\\"sha256\\\":\\\"([0-9a-f]{64})\\\",\\\"code\\\":\\\"" +
+                    Pattern.quote(code) + "\\\"}").matcher(axml);
+            if (!match.find()) throw new AssertionError("AXML evidence mismatch for " + current.get("id"));
+            inputHash = match.group(1);
+        } else {
+            String fixture = mutation.replace('_', '-');
+            Matcher match = Pattern.compile("\\{\\\"name\\\": \\\"" + Pattern.quote(fixture) +
+                    "\\\", \\\"stage\\\": \\\"" + Pattern.quote(stage) +
+                    "\\\", \\\"code\\\": \\\"" + Pattern.quote(code) +
+                    "\\\", \\\"input_sha256\\\": \\\"([0-9a-f]{64})\\\", \\\"result\\\": \\\"PASS\\\"}")
+                    .matcher(container);
+            if (!match.find()) throw new AssertionError("container evidence mismatch for " + current.get("id"));
+            inputHash = match.group(1);
+        }
+        return new ObservedHostCase(current.get("id"), stage, code, inputHash);
     }
 
     private static List<Map<String, String>> parse(byte[] bytes) {
@@ -108,15 +152,11 @@ public final class TamperCatalogRunner {
             String id = current.get("id");
             if (!id.matches("m302-[a-z0-9-]+") || !ids.add(id)) throw new AssertionError("invalid/duplicate id: " + id);
             String target = current.get("target");
-            if (!HOST_TARGETS.contains(target) && !RUNTIME_TARGETS.contains(target)) {
-                throw new AssertionError("unknown target: " + target);
-            }
-            if (!current.get("mutation").matches("[a-z0-9_]{3,64}")) {
-                throw new AssertionError("invalid mutation: " + id);
-            }
-            if (!current.get("expectedStage").matches("[A-Z0-9_]{3,64}") ||
+            if (!HOST_TARGETS.contains(target) && !RUNTIME_TARGETS.contains(target)) throw new AssertionError("unknown target: " + target);
+            if (!current.get("mutation").matches("[a-z0-9_]{3,64}") ||
+                    !current.get("expectedStage").matches("[A-Z0-9_]{3,64}") ||
                     !current.get("expectedCode").matches("[A-Z0-9_-]{3,96}")) {
-                throw new AssertionError("invalid expected stage/code: " + id);
+                throw new AssertionError("invalid mutation/stage/code: " + id);
             }
             requireValue(current, "payloadLoaded", "false");
             if (HOST_TARGETS.contains(target)) {
@@ -134,8 +174,7 @@ public final class TamperCatalogRunner {
                 requireValue(current, "partialJavaReferencesCleared", "not_applicable");
                 requireValue(current, "partialGuardReferencesCleared", "not_applicable");
                 requireValue(current, "completedMappingsZeroizedUnmapped", "not_applicable");
-                String partialMapping = current.get("partialMappingZeroizedUnmapped");
-                if (!partialMapping.equals("true") && !partialMapping.equals("not_applicable")) {
+                if (!Set.of("true", "not_applicable").contains(current.get("partialMappingZeroizedUnmapped"))) {
                     throw new AssertionError(id + " has invalid partial mapping contract");
                 }
             } else if (target.equals("runtime-posthandle")) {
@@ -157,99 +196,53 @@ public final class TamperCatalogRunner {
                 requireValue(current, "completedMappingsZeroizedUnmapped", "true");
                 requireValue(current, "partialMappingZeroizedUnmapped", "not_applicable");
             }
-            if (current.get("mutation").contains("cleanup")) {
-                requireValue(current, "cleanupFailureSuppressed", "true");
-            } else {
-                requireValue(current, "cleanupFailureSuppressed", "false");
-            }
+            requireValue(current, "cleanupFailureSuppressed",
+                    current.get("mutation").contains("cleanup") ? "true" : "false");
         }
     }
 
     private static void requireValue(Map<String, String> value, String key, String expected) {
-        if (!expected.equals(value.get(key))) {
-            throw new AssertionError(value.get("id") + " requires " + key + "=" + expected);
-        }
-    }
-
-    private static byte[] mutate(byte[] original, String mutation) {
-        if (mutation.equals("truncate_tail")) return Arrays.copyOf(original, original.length - 17);
-        byte[] output = original.clone();
-        int index = Math.floorMod(mutation.hashCode(), output.length);
-        output[index] ^= (byte) (0x80 | (mutation.length() & 0x7f));
-        if (mutation.endsWith("overflow")) Arrays.fill(output, index, Math.min(output.length, index + 8), (byte) 0xff);
-        if (mutation.equals("duplicate_entry")) System.arraycopy(output, 64, output, 128, 32);
-        if (mutation.equals("path_traversal")) {
-            byte[] traversal = "../payload.dex".getBytes(StandardCharsets.US_ASCII);
-            System.arraycopy(traversal, 0, output, index, Math.min(traversal.length, output.length - index));
-        }
-        return output;
-    }
-
-    private static void verifyProductionEvidence(Path apk, Path axml, Path container) throws IOException {
-        String apkText = Files.readString(apk, StandardCharsets.UTF_8);
-        for (String code : List.of(
-                "INPUT_ZIP_STRUCTURE", "INPUT_DUPLICATE_ENTRY", "INPUT_PATH_UNSAFE", "INPUT_LIMIT_EXCEEDED")) {
-            if (!apkText.contains("\"code\":\"" + code + "\"")) {
-                throw new AssertionError("APK production matrix missing " + code);
-            }
-        }
-        String axmlText = Files.readString(axml, StandardCharsets.UTF_8);
-        for (String code : List.of("AXML_MALFORMED", "AXML_LIMIT_EXCEEDED", "AXML_RESERVED_COLLISION")) {
-            if (!axmlText.contains("\"code\":\"" + code + "\"")) {
-                throw new AssertionError("AXML production matrix missing " + code);
-            }
-        }
-        String containerText = Files.readString(container, StandardCharsets.UTF_8);
-        if (!containerText.contains("\"name\": \"tamper_matrix\"") ||
-                !containerText.contains("\"status\": \"pass\"")) {
-            throw new AssertionError("container production tamper matrix did not pass");
-        }
+        if (!expected.equals(value.get(key))) throw new AssertionError(value.get("id") + " requires " + key + "=" + expected);
     }
 
     private static void writeTamperReport(
-            Path report,
-            int count,
-            String catalogHash,
-            String mutationHash,
-            Path apk,
-            Path axml,
-            Path container) throws IOException {
+            Path report, int count, List<ObservedHostCase> observed, String catalogHash,
+            String evidenceHash, Path apk, Path axml, Path container) throws IOException {
         Files.createDirectories(report.getParent());
-        Files.writeString(
-                report,
-                "{\n" +
-                        "  \"schema_version\": 1,\n" +
-                        "  \"status\": \"PASS\",\n" +
-                        "  \"cases\": " + count + ",\n" +
-                        "  \"catalog_sha256\": \"" + catalogHash + "\",\n" +
-                        "  \"mutations_sha256\": \"" + mutationHash + "\",\n" +
-                        "  \"production_evidence_sha256\": {\n" +
-                        "    \"apk\": \"" + hex(sha256(Files.readAllBytes(apk))) + "\",\n" +
-                        "    \"axml\": \"" + hex(sha256(Files.readAllBytes(axml))) + "\",\n" +
-                        "    \"container\": \"" + hex(sha256(Files.readAllBytes(container))) + "\"\n" +
-                        "  }\n" +
-                        "}\n",
+        StringBuilder cases = new StringBuilder();
+        for (int index = 0; index < observed.size(); index++) {
+            cases.append("    ").append(observed.get(index).json());
+            if (index != observed.size() - 1) cases.append(',');
+            cases.append('\n');
+        }
+        Files.writeString(report,
+                "{\n  \"schema_version\": 1,\n  \"status\": \"PASS_PENDING_DEVICE\",\n" +
+                "  \"cases\": " + count + ",\n  \"host_cases_passed\": " + observed.size() + ",\n" +
+                "  \"runtime_cases_pending\": " + (count - observed.size()) + ",\n" +
+                "  \"catalog_sha256\": \"" + catalogHash + "\",\n" +
+                "  \"host_evidence_sha256\": \"" + evidenceHash + "\",\n  \"host_cases\": [\n" + cases + "  ],\n" +
+                "  \"production_evidence_sha256\": {\n" +
+                "    \"apk\": \"" + hex(sha256(Files.readAllBytes(apk))) + "\",\n" +
+                "    \"axml\": \"" + hex(sha256(Files.readAllBytes(axml))) + "\",\n" +
+                "    \"container\": \"" + hex(sha256(Files.readAllBytes(container))) + "\"\n  }\n}\n",
                 StandardCharsets.UTF_8);
     }
 
     private static void writeSummary(Path report, Path regression, Path tamper) throws IOException {
         String regressionText = Files.readString(regression, StandardCharsets.UTF_8);
         String tamperText = Files.readString(tamper, StandardCharsets.UTF_8);
-        if (!regressionText.contains("\"status\": \"PASS\"") || !tamperText.contains("\"status\": \"PASS\"")) {
-            throw new AssertionError("M3-02 component report did not pass");
+        if (!regressionText.contains("\"status\": \"PASS\"") ||
+                !tamperText.contains("\"status\": \"PASS_PENDING_DEVICE\"")) {
+            throw new AssertionError("M3-02 component report did not pass its local boundary");
         }
         Files.createDirectories(report.getParent());
-        Files.writeString(
-                report,
-                "{\n" +
-                        "  \"schema_version\": 1,\n" +
-                        "  \"status\": \"PASS\",\n" +
-                        "  \"regression_sha256\": \"" + hex(sha256(Files.readAllBytes(regression))) + "\",\n" +
-                        "  \"tamper_sha256\": \"" + hex(sha256(Files.readAllBytes(tamper))) + "\",\n" +
-                        "  \"jazzer\": {\"version\": \"0.29.1\", \"status\": \"PENDING_PR_CI\"},\n" +
-                        "  \"native_libfuzzer\": {\"status\": \"PENDING_PR_CI\"},\n" +
-                        "  \"runtime_device_matrix\": {\"status\": \"PENDING_API29_API36\"}\n" +
-                        "}\n",
+        Files.writeString(report,
+                "{\n  \"schema_version\": 1,\n  \"status\": \"PASS_PENDING_REMOTE\",\n" +
+                "  \"regression_sha256\": \"" + hex(sha256(Files.readAllBytes(regression))) + "\",\n" +
+                "  \"tamper_sha256\": \"" + hex(sha256(Files.readAllBytes(tamper))) + "\",\n" +
+                "  \"jazzer\": {\"version\": \"0.29.1\", \"status\": \"PENDING_PR_CI\"},\n" +
+                "  \"native_libfuzzer\": {\"status\": \"PENDING_PR_CI\"},\n" +
+                "  \"runtime_device_matrix\": {\"status\": \"PENDING_API29_API36\"}\n}\n",
                 StandardCharsets.UTF_8);
     }
 
@@ -265,5 +258,14 @@ public final class TamperCatalogRunner {
         StringBuilder output = new StringBuilder(value.length * 2);
         for (byte current : value) output.append(String.format("%02x", current & 0xff));
         return output.toString();
+    }
+
+    private record ObservedHostCase(String id, String stage, String code, String inputHash) {
+        String canonical() { return id + ":" + stage + ":" + code + ":" + inputHash; }
+        String json() {
+            return "{\"id\":\"" + id + "\",\"observedStage\":\"" + stage +
+                    "\",\"observedCode\":\"" + code + "\",\"input_sha256\":\"" + inputHash +
+                    "\",\"result\":\"PASS\"}";
+        }
     }
 }
